Mobile cta buttons not showing when deployed but show on local. Trying to fix it.

--- a/src/style.css
+++ b/src/style.css
@@ -23,7 +23,7 @@ nav {
     position:fixed;
     overflow-y:scroll;
     overflow-x:hidden;
-    z-index: 100;
+    z-index: 50;
     background-color: white;
 }
 
